--- a/app/Resources/views/admin/templateAdmin.html.twig
+++ b/app/Resources/views/admin/templateAdmin.html.twig
@@ -17,7 +17,7 @@
             </div>
             <div class="profile_info">
               <span>Welcome,</span>
-              <h2>John Doe</h2>
+              <h2>{{ app.user.username }} </h2>
             </div>
           </div>
           <!-- /menu prile quick info -->
@@ -32,13 +32,13 @@
               <ul class="nav side-menu">
                 <li><a href="{{path('admin_index')}}"><i class="fa fa-home"></i> Home</a></li>
                  <li><a><i class="fa fa-desktop"></i> Mes Catégories <span class="fa fa-chevron-down"></span></a>
-                  <ul class="nav child_menu">
+                  <ul class="nav child_menu" style="display: none">
                    <li><a href="{{path('categorie_index')}}"><i class="fa fa-edit"></i> Burgers</a></li>
                    <li><a href="{{path('categorieboisson_index')}}"><i class="fa fa-edit"></i> Boissons</a></li>
                   </ul>
                 </li>
                  <li><a><i class="fa fa-desktop"></i> Ma Carte <span class="fa fa-chevron-down"></span></a>
-                  <ul class="nav child_menu">
+                  <ul class="nav child_menu" style="display: none">
                     <li><a href="{{path('burger_index')}}"><i class="fa fa-edit"></i>Mes Burgers</a></li>
                     <li><a href="{{path('accompagnement_index')}}"><i class="fa fa-edit"></i>Mes Accompagnements</a></li>
                     <li><a href="{{path('burgerspecial_index')}}"><i class="fa fa-edit"></i> Mes Burgers du moment </a></li>
@@ -47,7 +47,7 @@
                     <li><a href="{{path('menu_index')}}"><i class="fa fa-edit"></i> Mes Menus </a></li>
                   </ul>
                 </li>
-                 <li><a href="{{path('icon_index')}}"><i class="fa fa-home"></i> Mes icons</a></li>
+                <li><a href="{{path('icon_index')}}"><i class="fa fa-home"></i> Mes icons</a></li>
               </ul>
             </div>
            
@@ -69,7 +69,7 @@
             <ul class="nav navbar-nav navbar-right">
               <li class="">
                 <a href="javascript:;" class="user-profile dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-                  <img src="{{asset('image/gentelella/img.jpg')}}" alt="">John Doe
+                  <img src="{{asset('image/gentelella/img.jpg')}}" alt="">{{ app.user.username }}
                   <span class=" fa fa-angle-down"></span>
                 </a>
                 <ul class="dropdown-menu dropdown-usermenu animated fadeInDown pull-right">
@@ -84,7 +84,7 @@
                   <li>
                     <a href="javascript:;">Help</a>
                   </li>
-                  <li><a href="login.html"><i class="fa fa-sign-out pull-right"></i> Log Out</a>
+                  <li><a href="{{ path('fos_user_security_logout') }}"><i class="fa fa-sign-out pull-right"></i> Log Out</a>
                   </li>
                 </ul>
               </li>
