--- a/app/Resources/FOSUserBundle/views/Registration/confirmed.html.twig
+++ b/app/Resources/FOSUserBundle/views/Registration/confirmed.html.twig
@@ -6,6 +6,21 @@
 {% block fos_user_content %}
     <p>{{ 'registration.confirmed'|trans({'%username%': user.username}) }}</p>
    
-    <p><a href="{{ path("admin_index") }}">{{ 'registration.back'|trans }}</a></p>
+    
+      <div class="clearfix"></div>
+            <div class="separator">
+
+              <p class="change_link">Already a member ?
+               <a href="{{ path("admin_index") }}">GO</a>
+              </p>
+              <div class="clearfix"></div>
+              <br />
+              <div>
+                <h1><i class="fa fa-paw" style="font-size: 26px;"></i> Gentelella Alela!</h1>
+
+                <p>©2015 All Rights Reserved. Gentelella Alela! is a Bootstrap 3 template. Privacy and Terms</p>
+              </div>
+            </div>
+
    
 {% endblock fos_user_content %}
