--- a/app/Resources/FOSUserBundle/views/Security/login.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login.html.twig
@@ -23,7 +23,7 @@
             <div>
               <input type="submit" class="btn btn-dark submit" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans }}" />  
               {#<a class="btn btn-default submit" href="index.html">Log in</a>#}
-              <a class="reset_pass" href="#">Lost your password?</a>
+              <a class="reset_pass" href="{{ path("fos_user_resetting_request") }}">Lost your password?</a>
             </div>
             <div class="clearfix"></div>
             <div class="separator">
