--- a/web/css/news_css/main.css
+++ b/web/css/news_css/main.css
@@ -97,4 +97,41 @@ left_col scroll-view {
   display: inline-block;
   margin: 10px; }
 
+#section {
+  width: 100%;
+  max-height: 890px;
+  position: relative;
+  display: block;
+  /*    position: absolute;*/
+  overflow: hidden; }
+
+.bg-header {
+  width: 100%; }
+  .bg-header::before {
+    content: '';
+    position: absolute;
+    background-color: #000;
+    width: 100%;
+    opacity: 0.7;
+    top: 0;
+    bottom: 0; }
+
+.enter {
+  top: 50%;
+  left: 50%;
+  position: absolute; }
+
+.vague {
+  width: 100%;
+  overflow-x: hidden;
+  position: absolute;
+  top: 70%;
+  left: 0;
+  right: 0;
+  fill: #fff;
+  transition: top 0.3s ease-in-out; }
+
+.present {
+  height: 800px; }
+
 /*# sourceMappingURL=main.css.map */
